@@ -4,7 +4,6 @@ import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
@@ -28,6 +27,7 @@ class JsonAdaptedPerson {
     private final String phone;
     private final String email;
     private final String matricNumber;
+    private final Integer participation;
     private final List<JsonAdaptedTag> tags = new ArrayList<>();
     private final List<String> classSpaces = new ArrayList<>();
 
@@ -37,12 +37,14 @@ class JsonAdaptedPerson {
     @JsonCreator
     public JsonAdaptedPerson(@JsonProperty("name") String name, @JsonProperty("phone") String phone,
             @JsonProperty("email") String email, @JsonProperty("matricNumber") String matricNumber,
+            @JsonProperty("participation") Integer participation,
             @JsonProperty("tags") List<JsonAdaptedTag> tags,
             @JsonProperty("classSpaces") List<String> classSpaces) {
         this.name = name;
         this.phone = phone;
         this.email = email;
         this.matricNumber = matricNumber;
+        this.participation = participation;
         if (tags != null) {
             this.tags.addAll(tags);
         }
@@ -52,8 +54,8 @@ class JsonAdaptedPerson {
     }
 
     public JsonAdaptedPerson(String name, String phone, String email, String matricNumber,
-                             List<JsonAdaptedTag> tags) {
-        this(name, phone, email, matricNumber, tags, null);
+                             Integer participation, List<JsonAdaptedTag> tags) {
+        this(name, phone, email, matricNumber, participation, tags, null);
     }
 
     /**
@@ -64,13 +66,14 @@ class JsonAdaptedPerson {
         phone = source.getPhone().value;
         email = source.getEmail().value;
         matricNumber = source.getMatricNumber().value;
+        participation = source.getParticipation().value;
         tags.addAll(source.getTags().stream()
                 .map(JsonAdaptedTag::new)
-                .collect(Collectors.toList()));
+                .toList());
         classSpaces.addAll(source.getClassSpaces().stream()
                 .map(classSpaceName -> classSpaceName.value)
                 .sorted(String.CASE_INSENSITIVE_ORDER)
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     /**
@@ -127,8 +130,21 @@ class JsonAdaptedPerson {
         }
         final MatricNumber modelMatricNumber = new MatricNumber(matricNumber);
 
+        /*
+        final Participation modelParticipation;
+        if (participation == null) {
+            modelParticipation = new Participation(0);
+        } else if (!Participation.isValidParticipation(participation)) {
+            throw new IllegalValueException(Participation.MESSAGE_CONSTRAINTS);
+        } else {
+            modelParticipation = new Participation(participation);
+        }
+         */
+
         final Set<Tag> modelTags = new HashSet<>(personTags);
         //return new Person(modelName, modelPhone, modelEmail, modelMatricNumber, modelTags, modelClassSpaces);
+        //return new Person(modelName, modelPhone, modelEmail, modelMatricNumber, modelParticipation, modelTags,
+        //        modelClassSpaces);
         return new Person(modelName, modelPhone, modelEmail, modelMatricNumber, modelTags);
     }
 
